# hrr-playground

./: .gitignore  hrr-playground.cabal  stack.yaml
mysql/: tutorial.sql
src/: DataSource.hs  Main.hs
src/Table/: Fruit.hs  MarketHistory.hs
winscp/: watch-sync.winscp
