name:                 hrr-playground
version:              0.1.0.0
synopsis:             
-- description:
-- license:
-- license-file:
homepage:
author:               Kazuki Okamoto
maintainer:           kazuki.okamoto@kakkun61.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

executable hrr-playground
  main-is:              Main.hs
  other-modules:        DataSource
                      , Table.Fruit
                      , Table.MarketHistory
  -- other-extensions:
  build-depends:        base >= 4.7 && < 5
                      , template-haskell
                      , relational-record
                      , relational-query
                      , relational-query-HDBC
                      , relational-schemas
                      , HDBC
                      , HDBC-mysql
                      , persistable-record
  hs-source-dirs:       src
  default-language:     Haskell2010
  ghc-options:          -Wall
